src/Parse/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
        import java.util.LinkedList;
        public class Parser implements ParserConstants {

  static final public Absyn.Program Program() throws ParseException {
//  Absyn.ClassDecl cd; 
//  Absyn.ThreadDecl td;
//  Absyn.MainClassDecl mcd;
  LinkedList<Absyn.ClassDecl> cds = new LinkedList<Absyn.ClassDecl>();
    MainClassDecl(cds);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 33:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 33:
        ClassDecl(cds);
        break;
        ThreadDecl(cds);
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(0);
    {if (true) return new Absyn.Program(cds);}
    throw new Error("Missing return statement in function");
  }

  static final public void MainClassDecl(LinkedList<Absyn.ClassDecl> cl) throws ParseException {
  Token name = null; parent = null;
  Absyn.VarDecl vd;
  LinkedList<Absyn.VarDecl> vds = new LinkedList<Absyn.VarDecl>();
  Absyn.Stmt st;
  LinkedList<Absyn.Stmt> sts = new LinkedList<Absyn.Stmt>();
    jj_consume_token(33);
    name = jj_consume_token(ID);
    jj_consume_token(20);
    jj_consume_token(65);
    jj_consume_token(67);
    jj_consume_token(79);
    jj_consume_token(53);
    jj_consume_token(6);
    jj_consume_token(69);
    jj_consume_token(18);
    jj_consume_token(19);
    jj_consume_token(ID);
    jj_consume_token(7);
    jj_consume_token(20);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 30:
      case 49:
      case ID:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      vd = VarDecl();
                                                                                                             vds.add(vd);
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 6:
      case 8:
      case 11:
      case 20:
      case 40:
      case 47:
      case 72:
      case 75:
      case 81:
      case 83:
      case 90:
      case INT:
      case STRING:
      case ID:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      st = Stmt();
                                                                                                                                             sts.add(st);
    }
    jj_consume_token(106);
    jj_consume_token(106);
  cl.add( new Absyn.MainClassDecl(name.toString(),parent.toString(),vds,sts));
  }

  static final public void ClassDecl(LinkedList<Absyn.ClassDecl> cl) throws ParseException {
  Token name = null; parent = null;
  LinkedList<Absyn.VarDecl> vds = new LinkedList<Absyn.VarDecl>();
  LinkedList<Absyn.MethodDecl> mds = new LinkedList<Absyn.MethodDecl>();
    jj_consume_token(33);
    name = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 39:
      jj_consume_token(39);
      parent = jj_consume_token(ID);
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
    jj_consume_token(20);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 30:
      case 49:
      case 65:
      case ID:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_4;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 30:
      case 49:
      case ID:
        VarDecl(vds);
        break;
      case 65:
        MethodDecl(mds);
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(106);
   cl.add(new Absyn.ClassDecl(name.toString(),parent.toString(),fes,mds));
  }

  static final public void ThreadDecl(LinkedList<Absyn.ClassDecl> cl) throws ParseException {
  Token name = null; parent = null;
//  Absyn.VarDecl vad;
  LinkedList<Absyn.VarDecl> vads = new LinkedList<Absyn.VarDecl>();
 // Absyn.MethodDecl md;
  LinkedList<Absyn.MethodDecl> mds = new LinkedList<Absyn.MethodDecl>();
    jj_consume_token(33);
    name = jj_consume_token(ID);
    jj_consume_token(39);
    jj_consume_token(87);
    jj_consume_token(20);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 30:
      case 49:
      case 65:
      case ID:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_5;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 30:
      case 49:
      case ID:
        VarDecl(vads);
        break;
      case 65:
        MethodDecl(mds);
        break;
        VoidDecl(mds);
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(106);
   cl.add(new Absyn.ThreadDecl(name.toString(),vads,mds));
  }

  static final public void VarDecl(LinkedList<Absyn.VarDecl> vl) throws ParseException {
  Token name = null;
  Absyn.Type type;
  Absyn.Expr expr = null;
    type = Type();
    name = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 16:
      jj_consume_token(16);
      expr = Expr();
      jj_consume_token(14);
                                                    v1.add(new VarDecl(type,name.toString(),expr));
      break;
    case 14:
      jj_consume_token(14);
                                                    v1.add( new VarDecl(type,name.toString(),expr));
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void MethodDecl(LinkedList<Absyn.MethodDecl> ml) throws ParseException {
        Absyn.Type type = null;
        Token name;
        Absyn.Formal  param = null;
        Absyn.Stmt    stmt  = null;
        Absyn.Expr    expr  = null;
        boolean sync = false;
        LinkedList<Absyn.Formal> params   = new LinkedList<Absyn.Formal>();
        LinkedList<Absyn.VarDecl> locals  = new LinkedList<Absyn.VarDecl>();
        LinkedList<Absyn.Stmt> stmts      = new LinkedList<Absyn.Stmt>();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 65:
      jj_consume_token(65);
      jj_consume_token(67);
      jj_consume_token(79);
      break;
      jj_consume_token(65);
      type = Type();
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    name = jj_consume_token(ID);
    jj_consume_token(6);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 88:
      jj_consume_token(88);
                                sync = true;
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 30:
    case 49:
    case ID:
      param = Formal();
                                params.add(param);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 10:
          ;
          break;
        default:
          jj_la1[12] = jj_gen;
          break label_6;
        }
        jj_consume_token(10);
        param = Formal();
                                                                            params.add(param);
      }
      break;
    default:
      jj_la1[13] = jj_gen;
      ;
    }
    jj_consume_token(7);
    jj_consume_token(20);
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 30:
      case 49:
      case ID:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_7;
      }
      VarDecl(locals);
    }
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 6:
      case 8:
      case 11:
      case 20:
      case 40:
      case 47:
      case 72:
      case 75:
      case 81:
      case 83:
      case 90:
      case INT:
      case STRING:
      case ID:
        ;
        break;
      default:
        jj_la1[15] = jj_gen;
        break label_8;
      }
      stmt = Stmt();
                                stmts.add(stmt);
    }
    jj_consume_token(66);
    expr = Expr();
    jj_consume_token(14);
    jj_consume_token(106);
                  ml.add(new Absyn.MethodDecl(type, sync, name.toString(),
                                            params, locals, stmts, expr));
  }

  static final public void VoidDecl() throws ParseException {
  Token name = null;
  LinkedList<Absyn.VarDecl> vds = new LinkedList<Absyn.VarDecl>();
  Absyn.Stmt st = null;
  LinkedList<Absyn.Stmt> sts = new LinkedList<Absyn.Stmt>();
    jj_consume_token(65);
    jj_consume_token(79);
    name = jj_consume_token(ID);
    jj_consume_token(6);
    jj_consume_token(7);
    jj_consume_token(20);
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 30:
      case 49:
      case ID:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_9;
      }
      VarDecl(vds);
    }
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 6:
      case 8:
      case 11:
      case 20:
      case 40:
      case 47:
      case 72:
      case 75:
      case 81:
      case 83:
      case 90:
      case INT:
      case STRING:
      case ID:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_10;
      }
      st = Stmt();
                                                                          sts.add(st);
    }
    jj_consume_token(106);
   ml.add( new VoidDecl(name.toString(),vds,sts));
  }

//Formal(Type type, String name)
  static final public Absyn.Formal Formal() throws ParseException {
        Absyn.Type type;
        Token name;
    type = Type();
    name = jj_consume_token(ID);
          {if (true) return new Absyn.Formal(type, name.toString());}
    throw new Error("Missing return statement in function");
  }

  static final public Absyn.FieldDecl FieldDecl() throws ParseException {
  Absyn.Type type;
  Token name = null;
    type = Type();
    name = jj_consume_token(ID);
    jj_consume_token(14);
     {if (true) return new FieldDecl(type,name);}
    throw new Error("Missing return statement in function");
  }

  static final public Absyn.Type Type() throws ParseException {
 Absyn.Type t;
    if (jj_2_1(2147483647)) {
      t = BooleanType();
    } else if (jj_2_2(2147483647)) {
      t = IntegerType();
    } else if (jj_2_3(2147483647)) {
      t = IdentifierType();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    t = Tprime(t);
        {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  static final public Absyn.Type Tprime(Absyn.Type t) throws ParseException {
    t = ArrayType(t);
    {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  static final public Absyn.Type ArrayType(Absyn.Type t) throws ParseException {
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 18:
        ;
        break;
      default:
        jj_la1[18] = jj_gen;
        break label_11;
      }
      jj_consume_token(18);
      jj_consume_token(19);
    }
  {if (true) return new Absyn.ArrayType(t);}
    throw new Error("Missing return statement in function");
  }

  static final public Absyn.Type BooleanType() throws ParseException {
    jj_consume_token(30);
    {if (true) return new Absyn.BooleanType();}
    throw new Error("Missing return statement in function");
  }

  static final public Absyn.Type IntegerType() throws ParseException {
    jj_consume_token(49);
    {if (true) return new Absyn.IntegerType();}
    throw new Error("Missing return statement in function");
  }

  static final public Absyn.Type IdentifierType() throws ParseException {
  Token t;
    t = jj_consume_token(ID);
          {if (true) return new Absyn.IdentifierType(t.image);}
    throw new Error("Missing return statement in function");
  }

  static final public Absyn.Stmt Stmt() throws ParseException {
        Absyn.Stmt s;
    if (jj_2_4(2147483647)) {
      s = AssignStmt();
    } else if (jj_2_5(2147483647)) {
      s = BlockStmt();
    } else if (jj_2_6(2147483647)) {
      s = IfStmt();
    } else if (jj_2_7(2147483647)) {
      s = XinuCallStmt();
    } else if (jj_2_8(2147483647)) {
      s = WhileStmt();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return s;}
    throw new Error("Missing return statement in function");
  }

  static final public Absyn.Stmt AssignStmt() throws ParseException {
        Absyn.Expr lhs = null, rhs = null;
    lhs = Expr();
    jj_consume_token(16);
    rhs = Expr();
    jj_consume_token(14);
          {if (true) return new Absyn.AssignStmt((Absyn.AssignableExpr) lhs, rhs);}
    throw new Error("Missing return statement in function");
  }

  static final public Absyn.Stmt BlockStmt() throws ParseException {
        Absyn.Stmt stmt = null;
        LinkedList<Absyn.Stmt> stmts      = new LinkedList<Absyn.Stmt>();
    jj_consume_token(20);
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 6:
      case 8:
      case 11:
      case 20:
      case 40:
      case 47:
      case 72:
      case 75:
      case 81:
      case 83:
      case 90:
      case INT:
      case STRING:
      case ID:
        ;
        break;
      default:
        jj_la1[19] = jj_gen;
        break label_12;
      }
      stmt = Stmt();
                          stmts.add(stmt);
    }
    jj_consume_token(106);
          {if (true) return new Absyn.BlockStmt(stmts);}
    throw new Error("Missing return statement in function");
  }

  static final public Absyn.Stmt IfStmt() throws ParseException {
        Absyn.Expr test;
        Absyn.Stmt thenStm, elseStm = null;
    jj_consume_token(47);
    jj_consume_token(6);
    test = Expr();
    jj_consume_token(7);
    thenStm = Stmt();
    jj_consume_token(36);

              elseStm = null;
          {if (true) return new Absyn.IfStmt(test, thenStm, elseStm);}
    throw new Error("Missing return statement in function");
  }
